<resources>
    <string name="app_name">QuizApp</string>
    <string name="topic">Mathematics</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="instrution_body">Answer all four questions. Select an option from the drop-down list which you find most appropriate. To check your score, click on the submit button at the end of the quiz. Goodluck! </string>
    <string name="question">QUESTIONS</string>
    <string name="question_one">Solve for X, X^2 + 2X – 3 = 0 </string>
    <string name="question_two">Solve, (9 * 2 + 3 -15)^2</string>
    <string name="question_three">Express X in terms of Y, 10(XY)^2 = 490 </string>
    <string name="question_four">Find Y, Y + P + X^2 = 13, if P = 2, X = 1</string>
    <string name="answer1">-1,2</string>
    <string name="change">CHANGE</string>
    <string name="hint">Enter your name here</string>
    <string name="submit">SUBMIT</string>
    <string name="start_over">START OVER</string>

    <string-array name="questionOneOptions">
        <item name="One">Please select an option</item>
        <item name="A">A.) -1,2</item>
        <item name="B">B.) 2,3</item>
        <item name="C">C.) 0,1</item>
        <item name="D">D.) -3,1</item>
    </string-array>

    <string-array name="questionTwoOptions">
        <item>Please select an option</item>
        <item>A.) 20</item>
        <item>B.) 36</item>
        <item>C.) 35</item>
        <item>D.) 40</item>
    </string-array>

    <string-array name="questionThreeOptions">
        <item>Please select an option</item>
        <item>A.) 7/y</item>
        <item>B.) 7y</item>
        <item>C.) (490y)^(1/2)</item>
        <item>D.) y^2</item>
    </string-array>

    <string-array name="questionFourOptions">
        <item>Please select an option</item>
        <item>A.) 10</item>
        <item>B.) 7</item>
        <item>C.) -10</item>
        <item>D.) 14</item>
    </string-array>

</resources>
