<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/myBackground">

    <LinearLayout
        android:id="@+id/rootView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp"
                android:paddingEnd="4dp"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:text="@string/topic"
                android:textAllCaps="true"
                android:textColor="@color/deepBlack"
                android:textAppearance="?android:textAppearanceLarge"
                />




        </LinearLayout>

        <EditText
            android:id="@+id/newUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:inputType="textCapWords"
            android:paddingBottom="8dp" />





        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:text="@string/instructions"
            android:textColor="@color/deepBlack"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/instrution_body"
            android:textColor="@color/deepBlack"
            android:textAppearance="?android:textAppearanceMedium"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#4E4B4F" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:text="@string/question"
            android:textColor="@color/deepBlack"
            android:textAppearance="?android:textAppearanceMedium"/>

        <LinearLayout
            android:id="@+id/questionOneLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1"
                android:textColor="@color/deepBlack"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:paddingBottom="4dp"
                android:text="@string/question_one"
                android:textColor="@color/deepBlack"
                android:textAppearance="?android:textAppearanceMedium"/>

        </LinearLayout>

        <Spinner
            android:id="@+id/questionOneSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#4E4B4F" />

        <LinearLayout
            android:id="@+id/questionTwoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="2"
                android:textColor="@color/deepBlack"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:paddingBottom="4dp"
                android:text="@string/question_two"
                android:textColor="@color/deepBlack"
                android:textAppearance="?android:textAppearanceMedium"/>


        </LinearLayout>

        <Spinner
            android:id="@+id/questionTwoSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#4E4B4F" />

        <LinearLayout
            android:id="@+id/questionThreeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="3"
                android:textColor="@color/deepBlack"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:paddingBottom="4dp"
                android:text="@string/question_three"
                android:textColor="@color/deepBlack"
                android:textAppearance="?android:textAppearanceMedium"/>


        </LinearLayout>

        <Spinner
            android:id="@+id/questionThreeSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#4E4B4F" />

        <LinearLayout
            android:id="@+id/questionFourLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="4"
                android:textColor="@color/deepBlack"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:paddingBottom="4dp"
                android:text="@string/question_four"
                android:textColor="@color/deepBlack"
                android:textAppearance="?android:textAppearanceMedium"/>


        </LinearLayout>

        <Spinner
            android:id="@+id/questionFourSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#4E4B4F" />

        <LinearLayout
            style="?android:buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/submitButton"
                style="?android:buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="submitButton"
                android:text="@string/submit"
                android:textAllCaps="true" />

            <Button
                android:id="@+id/start_Over"
                style="?android:buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="startOver"
                android:text="@string/start_over"
                android:textAllCaps="true" />
        </LinearLayout>

        <TextView
            android:id="@+id/answerStatement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingBottom="8dp"
            android:text=""
            android:textColor="@color/deepBlack"
            android:textAppearance="?android:textAppearanceMedium"/>


    </LinearLayout>


</ScrollView>